lakehouse/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nessie-ui-ingress
  namespace: data-lakehouse
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    #kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: nessie-ui.192.168.1.160.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: catalog
            port:
              name: https
  tls:
  - hosts:
    - nessie-ui.192.168.1.160.nip.io
